--- a/mean/bower.json
+++ b/mean/bower.json
@@ -10,9 +10,9 @@
     "angular-mocks": "~1.2",
     "angular-bootstrap": "~0.11.0",
     "angular-ui-utils": "~0.1.1",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular-ui-select": "~0.7.0",
+    "angular-sanitize": "~1.2.26"
   },
-  "devDependencies": {
-    "angular-ui-select": "~0.7.0"
-  }
+  "devDependencies": {}
 }
