--- a/mean/bower.json
+++ b/mean/bower.json
@@ -12,7 +12,8 @@
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.10",
     "angular-ui-select": "~0.7.0",
-    "angular-sanitize": "~1.2.26"
+    "angular-sanitize": "~1.2.26",
+    "select2": "~3.4.5"
   },
   "devDependencies": {}
 }
