--- a/mean/package.json
+++ b/mean/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "grunt",
     "test": "grunt test",
-    "postinstall": "bower install --config.interactive=false"
+    "postinstall": "bower install --config.interactive=false --force-latest"
   },
   "dependencies": {
     "express": "~4.7.2",
