Resolving multiple versions of angular conflict [2/2]
refer to 650c65a155164e0731f4482a5ba6c95187cd6fd9
for the first part of this commit.

--- a/mean/bower.json
+++ b/mean/bower.json
@@ -15,5 +15,8 @@
     "angular-sanitize": "~1.2.26",
     "select2": "~3.4.5"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "angular": "1.2.26"
+  }
 }
