Resolving angular/angular-mocks dependency issues
When I would run grunt test, logs of errors would occur.
This was due to using different versions of angular-mocks
and angular. It seems like these packages must be the same
versions for our karma tests to execute properly.

--- a/mean/bower.json
+++ b/mean/bower.json
@@ -15,8 +15,5 @@
     "angular-sanitize": "~1.2.26",
     "select2": "~3.4.5"
   },
-  "devDependencies": {},
-  "resolutions": {
-    "angular": "1.2.26"
-  }
+  "devDependencies": {}
 }
