--- a/mean/bower.json
+++ b/mean/bower.json
@@ -15,7 +15,8 @@
     "angular-sanitize": "~1.2.26",
     "select2": "~3.4.5",
     "ngReactGrid": "~0.6.5",
-    "react": "~0.11.2"
+    "react": "~0.11.2",
+    "ngDialog": "~0.3.2"
   },
   "devDependencies": {}
 }
