--- a/mean/package.json
+++ b/mean/package.json
@@ -18,28 +18,29 @@
     "postinstall": "bower install --config.interactive=false"
   },
   "dependencies": {
+    "async": "~0.9.0",
+    "body-parser": "~1.5.2",
+    "bower": "~1.3.8",
+    "compression": "~1.0.9",
+    "connect-flash": "~0.1.1",
+    "connect-mongo": "~0.4.1",
+    "consolidate": "~0.10.0",
+    "cookie-parser": "~1.3.2",
     "express": "~4.7.2",
     "express-session": "~1.7.2",
-    "body-parser": "~1.5.2",
-    "cookie-parser": "~1.3.2",
-    "compression": "~1.0.9",
-    "method-override": "~2.1.2",
-    "morgan": "~1.2.2",
-    "connect-mongo": "~0.4.1",
-    "connect-flash": "~0.1.1",
+    "forever": "~0.11.0",
+    "glob": "~4.0.5",
+    "grunt-cli": "~0.1.13",
     "helmet": "~0.4.0",
-    "consolidate": "~0.10.0",
-    "swig": "~1.4.1",
+    "lodash": "~2.4.1",
+    "method-override": "~2.1.2",
     "mongoose": "~3.8.8",
+    "morgan": "~1.2.2",
+    "nodemailer": "~1.1.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
-    "lodash": "~2.4.1",
-    "forever": "~0.11.0",
-    "bower": "~1.3.8",
-    "grunt-cli": "~0.1.13",
-    "glob": "~4.0.5",
-    "async": "~0.9.0",
-    "nodemailer": "~1.1.1"
+    "swig": "~1.4.1",
+    "xlsx": "^0.7.12"
   },
   "devDependencies": {
     "supertest": "~0.13.0",
