--- a/mean/bower.json
+++ b/mean/bower.json
@@ -17,7 +17,8 @@
     "ngReactGrid": "~0.6.5",
     "react": "~0.11.2",
     "ngDialog": "~0.3.2",
-    "ng-file-upload": "~1.6.12"
+    "ng-file-upload": "~1.6.12",
+    "ng-file-upload-shim": "~1.6.12"
   },
   "devDependencies": {}
 }
