--- a/mean/package.json
+++ b/mean/package.json
@@ -41,6 +41,7 @@
     "nodemailer": "~1.1.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
+    "socket.io": "^1.2.1",
     "swig": "~1.4.1",
     "xlsx": "^0.7.12"
   },
