Began Protractor Tests

--- a/mean/package.json
+++ b/mean/package.json
@@ -26,12 +26,19 @@
     "connect-mongo": "~0.4.1",
     "consolidate": "~0.10.0",
     "cookie-parser": "~1.3.2",
+    "escodegen": "~1.4.1",
+    "esprima": "~1.2.2",
     "express": "~4.7.2",
     "express-session": "~1.7.2",
+    "fileset": "~0.1.5",
     "forever": "~0.11.0",
     "glob": "~4.0.5",
     "grunt-cli": "~0.1.13",
+    "grunt-protractor-runner": "^1.1.4",
+    "grunt-protractor-webdriver": "^0.1.9",
+    "handlebars": "~2.0.0",
     "helmet": "~0.4.0",
+    "js-yaml": "~3.2.3",
     "lodash": "~2.4.1",
     "method-override": "~2.1.2",
     "mongoose": "~3.8.8",
@@ -41,37 +48,35 @@
     "nodemailer": "~1.1.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
+    "protractor": "^1.4.0",
+    "resolve": "~1.0.0",
     "swig": "~1.4.1",
-    "xlsx": "^0.7.12",
-    "handlebars": "~2.0.0",
     "wordwrap": "0.0.2",
-    "fileset": "~0.1.5",
-    "esprima": "~1.2.2",
-    "escodegen": "~1.4.1",
-    "js-yaml": "~3.2.3",
-    "resolve": "~1.0.0"
+    "xlsx": "^0.7.12"
   },
   "devDependencies": {
-    "supertest": "~0.13.0",
-    "should": "~4.0.4",
-    "grunt-env": "~0.4.1",
-    "grunt-node-inspector": "~0.1.3",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-csslint": "^0.2.0",
-    "grunt-ngmin": "0.0.3",
-    "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-nodemon": "~0.3.0",
     "grunt-concurrent": "~0.5.0",
-    "grunt-mocha-test": "~0.11.0",
+    "grunt-contrib-csslint": "^0.2.0",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-env": "~0.4.1",
     "grunt-karma": "~0.8.2",
-    "load-grunt-tasks": "~0.6.0",
+    "grunt-mocha-test": "~0.11.0",
+    "grunt-ngmin": "0.0.3",
+    "grunt-node-inspector": "~0.1.3",
+    "grunt-nodemon": "~0.3.0",
+    "grunt-protractor-runner": "^1.1.4",
     "karma": "~0.12.0",
-    "karma-jasmine": "~0.2.1",
-    "karma-coverage": "~0.2.0",
     "karma-chrome-launcher": "~0.1.2",
+    "karma-coverage": "~0.2.0",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-phantomjs-launcher": "~0.1.2"
+    "karma-jasmine": "~0.2.1",
+    "karma-phantomjs-launcher": "~0.1.2",
+    "load-grunt-tasks": "~0.6.0",
+    "protractor": "^1.4.0",
+    "should": "~4.0.4",
+    "supertest": "~0.13.0"
   }
 }
