--- a/mean/bower.json
+++ b/mean/bower.json
@@ -18,7 +18,8 @@
     "react": "~0.11.2",
     "ngDialog": "~0.3.2",
     "ng-file-upload": "~1.6.12",
-    "ng-file-upload-shim": "~1.6.12"
+    "ng-file-upload-shim": "~1.6.12",
+    "async": "~0.9.0"
   },
   "devDependencies": {}
 }
