--- a/mean/package.json
+++ b/mean/package.json
@@ -18,7 +18,7 @@
     "postinstall": "bower install --config.interactive=false"
   },
   "dependencies": {
-    "async": "~0.9.0",
+    "async": "^0.9.0",
     "body-parser": "~1.5.2",
     "bower": "~1.3.8",
     "compression": "~1.0.9",
@@ -26,12 +26,17 @@
     "connect-mongo": "~0.4.1",
     "consolidate": "~0.10.0",
     "cookie-parser": "~1.3.2",
+    "escodegen": "~1.4.1",
+    "esprima": "~1.2.2",
     "express": "~4.7.2",
     "express-session": "~1.7.2",
+    "fileset": "~0.1.5",
     "forever": "~0.11.0",
     "glob": "~4.0.5",
     "grunt-cli": "~0.1.13",
+    "handlebars": "~2.0.0",
     "helmet": "~0.4.0",
+    "js-yaml": "~3.2.3",
     "lodash": "~2.4.1",
     "method-override": "~2.1.2",
     "mongoose": "~3.8.8",
@@ -41,15 +46,10 @@
     "nodemailer": "~1.1.1",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
+    "resolve": "~1.0.0",
     "swig": "~1.4.1",
-    "xlsx": "^0.7.12",
-    "handlebars": "~2.0.0",
     "wordwrap": "0.0.2",
-    "fileset": "~0.1.5",
-    "esprima": "~1.2.2",
-    "escodegen": "~1.4.1",
-    "js-yaml": "~3.2.3",
-    "resolve": "~1.0.0"
+    "xlsx": "^0.7.12"
   },
   "devDependencies": {
     "supertest": "~0.13.0",
